--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using BlazorApp1Task1
 @using BlazorApp1Task1.Layout
+@using Microsoft.AspNetCore.Components.Authorization
